Fix fact style for readability

--- a/style.css
+++ b/style.css
@@ -90,5 +90,9 @@ h1 {
 		font-size: 1.5rem;
 		width: 90%;
 		bottom: 0px;
+		height: max-content;
+		background-color: rgba(0, 0, 0, 0.397);
+		line-height: 2rem;
 	}
+	
 }
